--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   intl: ^0.18.1 #日期、时间、数字、货币等的格式化
   cached_network_image: ^3.3.0 #图片缓存，类似glide
   easy_refresh: ^3.4.0 #轻量级下拉刷新和上拉加载库
+  provider: ^6.1.1 # 状态管理
 
 dev_dependencies:
   flutter_test:
