--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   webview_flutter: ^4.13.0 # webview
   permission_handler: ^12.0.1  # 权限申请（Android/iOS）
   path_provider: ^2.1.5  # 获取本地存储路径
+  image_picker: ^1.2.1 # 图片选择
+  saver_gallery: ^4.1.0 #图片保存
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  build_runner: 2.4.10
+  build_runner: ^2.4.13
   retrofit_generator: 8.1.0
   json_serializable: 6.8.0
 
