--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^1.2.1 # 图片选择
   saver_gallery: ^4.1.0 #图片保存
   flutter_image_compress: ^2.4.0 # 图片压缩
+  get: ^4.7.3 #getX
 
 dev_dependencies:
   flutter_test:
